--- a/Python/Bayes.ipynb
+++ b/Python/Bayes.ipynb
@@ -534,11 +534,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "9bda471b13ef6117d5735d91ee0151ed3df36e91ae5aa7843452afdea7d023bf"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit (windows store)",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -551,9 +549,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f35195dfbd3bbff5cfb823d98890f9ec7a0d964d449dc32014dc90ac995e4e64"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
